--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EbookDB;Trusted_Connection=True;TrustServerCertificate=True;"
-    }
- 
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EbookDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "ImageBaseUrl": "http://localhost:5181"
 
 }
