--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # .NET Core (backend)
+backend/.vs
 backend/bin/
 backend/MonBackend/obj/
 
@@ -7,5 +8,8 @@ frontend/node_modules/
 frontend/dist/
 frontend/tmp/
 frontend/.angular/
+
+*.vsidx
+*json.lock
 
 
